[package]
name = "bt_secure_storage"
version = "0.1.0"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "A simple and lightweight Secret Vault and Encryption Library for Rust to store secrets"
keywords = ["secrets", "storage", "cryptography"]
categories = ["cryptography"]
repository = "https://github.com/bachuetech/"
readme = "README.md"
homepage = "https://github.com/bachuetech/"
license = "GPL-3.0-only"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
bt_logger = "0.2.5"
bt_string_utils = "0.2.4"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
pbkdf2 = "0.12.2"
rand = "0.9.2"
serde_json = "1.0.145"
sha2 = "0.10.9"
sha3 = "0.10.8"
whoami = "1.6.1"

[dev-dependencies]
ctor = "0.6.0"
